--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
+    "simple-icons": "^14.11.0",
+    "simple-icons-astro": "^14.11.0",
     "tailwindcss": "^4.0.14"
   }
 }
