--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.1",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
     "simple-icons": "^14.11.0",
